# RadarPlotter

./: .gitignore  Cargo.toml  README.md
.github/profile/: README.md
PPIRender.app/Contents/: Info.plist
src/: config.rs  main.rs  processing.rs  queue.rs
ui/: app_theme.slint  appwindow.slint
ui/components/: bottom_bar.slint  folder_queue.slint  progress_panel.slint  settings_panel.slint  top_bar.slint
ui/material/ui/icons/: icons.slint
