[package]
name = "csv_to_ppi_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rfd = "0.14"
anyhow = "1.0"
image = "0.25"
colorous = "1.0"
rayon = "1.10"
num_cpus = "1.16"

[build-dependencies]
slint-build = "1.8"
